--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
   }
 
   body {
@@ -17,6 +19,15 @@
     -ms-text-size-adjust: 100%;
     font-size: 16px; /* Prevent zoom on iOS */
     min-height: 100vh;
+    margin: 0;
+    padding: 0;
+  }
+
+  #root {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
   }
 
   h1 {
